[tool.poetry]
name = "wheel-demo"
version = "0.1.0"
description = ""
authors = ["p.peton.ext <p.peton.ext@manitou-group.com>"]
readme = "README.md"
packages = [{include = "wheel_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
